--- a/client/index.html
+++ b/client/index.html
@@ -2,8 +2,7 @@
 <html lang="ru">
 	<head>
 		<meta charset="UTF-8" />
-		<link rel="icon" type="image/svg+xml" href="/vite.svg" />
-		<!-- <link rel="icon" href="/favicon.ico" /> -->
+		<link rel="icon" href="/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<!-- <meta name="theme-color" content="hsl(0, 0%, 0%)" /> -->
 		<!-- <meta name="description" content="Спортивный Защитник - ..." /> -->
