--- a/client/index.html
+++ b/client/index.html
@@ -4,9 +4,9 @@
 		<meta charset="UTF-8" />
 		<link rel="icon" href="/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<!-- <meta name="theme-color" content="hsl(0, 0%, 0%)" /> -->
-		<!-- <meta name="description" content="Спортивный Защитник - ..." /> -->
-		<!-- <link rel="apple-touch-icon" href="logo192.png" /> -->
+		<meta name="theme-color" content="hsl(0, 0%, 100%)" />
+		<meta name="description" content="Ваши права в фитнес-индустрии" />
+		<link rel="apple-touch-icon" href="logo192.png" />
 		<link rel="manifest" href="manifest.json" />
 		<title>Спортивный Защитник</title>
 	</head>
